--- a/software/website/main.css
+++ b/software/website/main.css
@@ -6,7 +6,45 @@ body {
   font-family: 'Maven Pro', sans-serif;
 }
 body, input, button {
-  font-size: 1.2em;
+  font-size: 1.0em;
+  color: #333;
+}
+input[type="text"] {
+  border-radius: 10px;
+  padding: 10px;
+  text-align: center;
+  border: 2px solid #333;
+}
+input[type="color"] {
+  border: 2px solid #333;
+}
+.std-button {
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  border-radius: 10px;
+  color: #fff;
+  padding: 10px 20px;
+  border: 2px solid #333;
+  background-color: #333;
+  font-size: 0.8em;
+}
+.del-button {
+  height: 20px;
+  width: 20px;
+  border: 0;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  border-radius: 10px;
+  border: 2px solid rgb(147, 147, 147);
+  color: rgb(147, 147, 147);
+  background-color: #fff;
+}
+.color-circle {
+  width: 20px;
+  height: 20px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  border-radius: 10px;
 }
 .full-width {
    width: 100%;
@@ -28,9 +66,14 @@ body, input, button {
 }
 .circle-button {
   -webkit-animation: pulse 30s infinite alternate;
-  border-radius: 75px;
-  width: 150px;
-  height: 150px;
+  -moz-animation: pulse 30s infinite alternate;
+  animation: pulse 30s infinite alternate;
+  font-size: 5em;
+  -webkit-border-radius: 50px;
+  -moz-border-radius: 50px;
+  border-radius: 50px;
+  width: 100px;
+  height: 100px;
   outline: none;
   border: none;
 }
@@ -44,10 +87,37 @@ body, input, button {
   height: 75px;
   text-align: center;
 }
-.vertical-gap {
+.vertical-gap-5 {
+  margin: 5px 0;
+}
+.vertical-gap-10 {
   margin: 10px 0;
 }
+.vertical-gap-20 {
+  margin: 20px 0;
+}
+.small-cell {
+  width: 7px;
+}
 @-webkit-keyframes pulse {
+  0% {background-color: 	#9400D3;}
+  17% {background-color: #4B0082;}
+  34% {background-color: #0000FF;}
+  51% {background-color: #00FF00;}
+  68% {background-color: #FFFF00;}
+  85% {background-color: #FF7F00;}
+  100% {background-color: #FF0000;}
+}
+@-moz-keyframes pulse {
+  0% {background-color: 	#9400D3;}
+  17% {background-color: #4B0082;}
+  34% {background-color: #0000FF;}
+  51% {background-color: #00FF00;}
+  68% {background-color: #FFFF00;}
+  85% {background-color: #FF7F00;}
+  100% {background-color: #FF0000;}
+}
+@keyframes pulse {
   0% {background-color: 	#9400D3;}
   17% {background-color: #4B0082;}
   34% {background-color: #0000FF;}
