--- a/software/website/main.css
+++ b/software/website/main.css
@@ -1,3 +1,9 @@
+html {
+  box-sizing: border-box;
+}
+*, *:before, *:after {
+  box-sizing: inherit;
+}
 body, html {
   height: 100%;
 }
@@ -31,7 +37,6 @@ input[type="color"] {
 .del-button {
   height: 20px;
   width: 20px;
-  border: 0;
   -webkit-border-radius: 10px;
   -moz-border-radius: 10px;
   border-radius: 10px;
@@ -44,7 +49,7 @@ input[type="color"] {
   height: 20px;
   -webkit-border-radius: 10px;
   -moz-border-radius: 10px;
-  border-radius: 10px;
+  border-radius: 11px;
 }
 .full-width {
    width: 100%;
@@ -97,7 +102,7 @@ input[type="color"] {
   margin: 20px 0;
 }
 .small-cell {
-  width: 7px;
+  width: 5px;
 }
 @-webkit-keyframes pulse {
   0% {background-color: 	#9400D3;}
