--- a/software/website/main.css
+++ b/software/website/main.css
@@ -37,19 +37,24 @@ input[type="color"] {
 .del-button {
   height: 20px;
   width: 20px;
-  -webkit-border-radius: 10px;
-  -moz-border-radius: 10px;
-  border-radius: 10px;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  border-radius: 50%;
+  display: block;
+  margin: 0 auto;
+  padding: 0;
   border: 2px solid rgb(147, 147, 147);
   color: rgb(147, 147, 147);
   background-color: #fff;
+  text-align: center;
 }
 .color-circle {
   width: 20px;
   height: 20px;
-  -webkit-border-radius: 10px;
-  -moz-border-radius: 10px;
-  border-radius: 11px;
+  display: block;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  border-radius: 50%;
 }
 .full-width {
    width: 100%;
@@ -74,11 +79,15 @@ input[type="color"] {
   -moz-animation: pulse 30s infinite alternate;
   animation: pulse 30s infinite alternate;
   font-size: 5em;
-  -webkit-border-radius: 50px;
-  -moz-border-radius: 50px;
-  border-radius: 50px;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  border-radius: 50%;
   width: 100px;
   height: 100px;
+  padding: 0;
+  margin: 0 auto;
+  display: block;
+  text-align: center;
   outline: none;
   border: none;
 }
