--- a/software/website/main.css
+++ b/software/website/main.css
@@ -19,10 +19,10 @@ input[type="text"] {
   border-radius: 10px;
   padding: 10px;
   text-align: center;
-  border: 2px solid #333;
+  border: 2px solid #454545;
 }
-input[type="color"] {
-  border: 2px solid #333;
+.device-table {
+  width: 100px;
 }
 .std-button {
   -webkit-border-radius: 10px;
@@ -32,22 +32,27 @@ input[type="color"] {
   padding: 10px 20px;
   border: 2px solid #333;
   background-color: #333;
-  font-size: 0.8em;
+}
+.bold-text {
+  font-weight: bold;
 }
 .del-button {
-  height: 20px;
-  width: 20px;
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
   border-radius: 50%;
   margin: 0 auto;
   padding: 0;
+  width: 20px;
+  height: 20px;
+  line-height: 1.0;
+  display: inline-block;
   border: 2px solid rgb(147, 147, 147);
   color: rgb(147, 147, 147);
   background-color: #fff;
   text-align: center;
 }
 .color-circle {
+  margin: 0;
   width: 20px;
   height: 20px;
   display: block;
@@ -83,7 +88,7 @@ input[type="color"] {
   border-radius: 50%;
   width: 100px;
   height: 100px;
-  padding: 0;
+  line-height: 1.0;
   margin: 0 auto;
   display: block;
   text-align: center;
@@ -108,6 +113,12 @@ input[type="color"] {
 }
 .vertical-gap-20 {
   margin: 20px 0;
+}
+.vertical-gap-30 {
+  margin: 30px 0;
+}
+.vertical-gap-50 {
+  margin: 50px 0;
 }
 .small-cell {
   width: 5px;
