--- a/software/website/main.css
+++ b/software/website/main.css
@@ -1,28 +1,92 @@
-html {
-  box-sizing: border-box;
-}
-*, *:before, *:after {
+*,
+*:before,
+*:after {
   box-sizing: inherit;
 }
-body, html {
+html { box-sizing: border-box; }
+body,
+html {
   height: 100%;
 }
 body {
   margin: 0;
   font-family: 'Maven Pro', sans-serif;
 }
-body, input, button {
+body,
+button,
+input {
   font-size: 1.0em;
-  color: #333;
+  color: #454545;
+}
+input[type="text"],
+textarea {
+  border: 2px solid #454545;
+  border-radius: 10px;
 }
 input[type="text"] {
-  border-radius: 10px;
   padding: 10px;
   text-align: center;
-  border: 2px solid #454545;
 }
-.device-table {
-  width: 100px;
+textarea {
+  padding: 5px;
+  resize: none;
+  width: 100%;
+}
+/* TODO: Cross browser compatible */
+input[type="range"] {
+  background-color: gray;
+  height: 3px;
+  width: 100%;
+  margin: 0;
+  -webkit-appearance: none;
+  border-radius: 10px;
+}
+input[type="range"]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+    border: 1px solid #333;
+    height: 15px;
+    width: 15px;
+    border-radius: 50%;
+    background: #FFF;
+    cursor: pointer;
+}
+table {
+  border-spacing:0;
+  border-collapse:collapse;
+}
+.button-image {
+   vertical-align: middle;
+}
+.filter-button {
+  background: #bdbdbd;
+  border: 1px solid #bdbdbd;
+  color: #fff;
+  padding: 5px;
+  flex-grow: 1;
+}
+.filter-button:disabled {
+  background: #6c6c6c;
+}
+.disabled { color: #7c7c7c; }
+.color-picker {
+  width: 100%;
+  background: -webkit-linear-gradient(
+    left,
+    #F00 0%,
+    #FF0 16.66%,
+    #0F0 33.33%,
+    #0FF 50%,
+    #00F 66.66%,
+    #F0F 83.33%,
+    #F00 100%);
+}
+.color-picker::-moz-range-track {
+  height: 0;
+}
+.color-value {
+  width: 100%;
+  height: 15px;
+  border-radius: 15px;
 }
 .std-button {
   -webkit-border-radius: 10px;
@@ -33,24 +97,6 @@ input[type="text"] {
   border: 2px solid #333;
   background-color: #333;
 }
-.bold-text {
-  font-weight: bold;
-}
-.del-button {
-  -webkit-border-radius: 50%;
-  -moz-border-radius: 50%;
-  border-radius: 50%;
-  margin: 0 auto;
-  padding: 0;
-  width: 20px;
-  height: 20px;
-  line-height: 1.0;
-  display: inline-block;
-  border: 2px solid rgb(147, 147, 147);
-  color: rgb(147, 147, 147);
-  background-color: #fff;
-  text-align: center;
-}
 .color-circle {
   margin: 0;
   width: 20px;
@@ -60,35 +106,27 @@ input[type="text"] {
   -moz-border-radius: 50%;
   border-radius: 50%;
 }
-.full-width {
-   width: 100%;
-}
+.full-width { width: 100%; }
 .middle-container {
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100%;
 }
-.text-center {
-  text-align: center;
-}
-.error {
-  color: rgb(255, 58, 46);
-}
-.float-right {
-  float: right;
-}
+.text-center { text-align: center; }
+.error { color: rgb(255, 58, 46); }
+.float-right { float: right; }
 .circle-button {
   -webkit-animation: pulse 30s infinite alternate;
   -moz-animation: pulse 30s infinite alternate;
   animation: pulse 30s infinite alternate;
   font-size: 5em;
+  color: #FFF;
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
   border-radius: 50%;
   width: 100px;
   height: 100px;
-  padding: 13px 0;
   line-height: 1.0;
   margin: 0 auto;
   vertical-align: middle;
@@ -97,6 +135,19 @@ input[type="text"] {
   outline: none;
   border: none;
 }
+.icon {
+  margin: 0 auto;
+  background-color: none;
+  border: none;
+  background-size: 25px 25px;
+  width: 25px;
+  height: 25px;
+}
+.add { background-image: url('img/icon_add.png'); }
+.edit { background-image: url('img/icon_edit.png'); }
+.envelope { background-image: url('img/icon_incoming-message.png'); }
+.envelope-disabled { background-image: url('img/icon_incoming-message-blocked.png'); }
+.delete { background-image: url('img/icon_delete.png'); }
 .circle-button:active {
   -webkit-box-shadow: 0 0 10px rgba(0,0,0,0.75) inset;
   -moz-box-shadow: 0 0 10px rgba(0,0,0,0.75) inset;
@@ -107,26 +158,14 @@ input[type="text"] {
   height: 75px;
   text-align: center;
 }
-.vertical-gap-5 {
-  margin: 5px 0;
-}
-.vertical-gap-10 {
-  margin: 10px 0;
-}
-.vertical-gap-20 {
-  margin: 20px 0;
-}
-.vertical-gap-30 {
-  margin: 30px 0;
-}
-.vertical-gap-50 {
-  margin: 50px 0;
-}
-.small-cell {
-  width: 5px;
-}
+.vertical-gap-5 { margin: 5px 0; }
+.vertical-gap-10 { margin: 10px 0; }
+.vertical-gap-20 { margin: 20px 0; }
+.vertical-gap-30 { margin: 30px 0; }
+.vertical-gap-50 { margin: 50px 0; }
+.small-cell { width: 9px; }
 @-webkit-keyframes pulse {
-  0% {background-color: 	#9400D3;}
+  0% {background-color:	#9400D3;}
   17% {background-color: #4B0082;}
   34% {background-color: #0000FF;}
   51% {background-color: #00FF00;}
@@ -144,7 +183,7 @@ input[type="text"] {
   100% {background-color: #FF0000;}
 }
 @keyframes pulse {
-  0% {background-color: 	#9400D3;}
+  0% {background-color: #9400D3;}
   17% {background-color: #4B0082;}
   34% {background-color: #0000FF;}
   51% {background-color: #00FF00;}
